@@ -14,6 +14,7 @@
 		<news>
 			- Főoldal megjelenítése
 			- Pozíció/nézettség betöltés/mentés támogatása az RTL+-tól/felé
+			- Következő videó automatikus indítása
 		</news>
 		<assets>
 		  <icon>icon.png</icon>
